# rustTorrent

./: .cargo-clippy-flags  .gitignore  .woodpecker.yml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.example.yml  docker-compose.yml  package-lock.json  package.json
.forgejo/workflows/: ci.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  desktop-build.yml  release.yml
bench/: docker-compose.yml
bench/seeder/: Dockerfile
benchv2/: Dockerfile
crates/bencode/: Cargo.toml
crates/buffers/: Cargo.toml
crates/clone_to_owned/: Cargo.toml
crates/dht/: Cargo.toml
crates/librtbit/: Cargo.toml  build.rs
crates/librtbit/examples/: simulate_traffic.rs
crates/librtbit/src/: api.rs  category.rs  create_torrent_file.rs  lib.rs  peer_connection.rs
crates/librtbit/src/http_api/: auth.rs  mod.rs
crates/librtbit/src/http_api/handlers/: configure.rs  indexarr.rs  mod.rs  rss.rs  torrents.rs
crates/librtbit/src/rss/: db.rs  monitor.rs
crates/librtbit/src/session/: helpers.rs  mod.rs  types.rs
crates/librtbit/src/session_persistence/: json.rs  mod.rs
crates/librtbit/src/storage/filesystem/: fs.rs
crates/librtbit/src/tests/: cancel_init.rs  e2e.rs
crates/librtbit/src/torrent_state/: mod.rs  stats.rs
crates/librtbit/src/torrent_state/live/peers/: mod.rs
crates/librtbit/webui/: index.html  package.json
crates/librtbit/webui/src/: api-types.ts  context.tsx  http-api.ts  main.tsx  mock-api.ts
crates/librtbit/webui/src/components/: IndexarrBrowse.tsx  RSSPage.tsx  Toolbar.tsx
crates/librtbit/webui/src/components/config/: ConfigModal.tsx  FoldersTab.tsx  RSSTab.tsx
crates/librtbit_core/: Cargo.toml
crates/librtbit_core/src/: error.rs  magnet.rs  speed_estimator.rs  torrent_metainfo.rs
crates/librtbit_lsd/: Cargo.toml
crates/peer_binary_protocol/: Cargo.toml
crates/peer_binary_protocol/src/: lib.rs
crates/rtbit/: Cargo.toml
crates/rtbit/src/: main.rs
crates/sha1w/: Cargo.toml
crates/tracker_comms/: Cargo.toml
crates/tracker_comms/src/: tracker_comms_http.rs  tracker_comms_udp.rs
crates/upnp/: Cargo.toml
crates/upnp-serve/: Cargo.toml
desktop/: package.json
desktop/src-tauri/: Cargo.toml
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
documentation/: IndexarrRustTorrentIntegration.md
root/etc/s6-overlay/s6-rc.d/init-rtbit-config/: run  up
root/etc/s6-overlay/s6-rc.d/svc-rtbit/: run
tests/sonarr-e2e/: docker-compose.yml
