[workspace]
resolver = "2"
members = [
    "crates/rtbit",
    "desktop/src-tauri",
]
exclude = ["benchv2"]

# Everything except desktop
default-members = [
    "crates/rtbit",
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.lints.rust]
unused = "warn"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = false
lto = "thin"

[profile.release-github]
inherits = "release"
lto = false

[profile.release-debug]
inherits = "release"
debug = true

[workspace.dependencies]
# Internal crates (git + tag) - keys are import names used in source code
librtbit = { version = "0.1.1", registry = "forgejo", default-features = false }
bencode = { version = "0.1.0", registry = "forgejo", package = "librtbit-bencode", default-features = false }
buffers = { version = "0.1.0", registry = "forgejo", package = "librtbit-buffers" }
clone_to_owned = { version = "0.1.0", registry = "forgejo", package = "librtbit-clone-to-owned" }
librtbit-core = { version = "0.1.1", registry = "forgejo", default-features = false }
dht = { version = "0.1.0", registry = "forgejo", package = "librtbit-dht", default-features = false }
librtbit-lsd = { version = "0.1.1", registry = "forgejo", default-features = false }
peer_binary_protocol = { version = "0.1.0", registry = "forgejo", package = "librtbit-peer-protocol", default-features = false }
sha1w = { version = "0.1.0", registry = "forgejo", package = "librtbit-sha1-wrapper", default-features = false }
tracker_comms = { version = "0.1.0", registry = "forgejo", package = "librtbit-tracker-comms", default-features = false }
librtbit-upnp = { version = "0.1.1", registry = "forgejo" }
upnp-serve = { version = "0.1.0", registry = "forgejo", package = "librtbit-upnp-serve", default-features = false }

# External crates
anyhow = "1"
arc-swap = "1.7"
arrayvec = "0.7"
assert_cfg = "0.1"
async-backtrace = "0.2"
async-compression = "0.4"
async-stream = "0.3"
async-trait = "0.1"
atoi = "2"
aws-lc-rs = "1.12"
axum = "0.8"
axum-extra = "0.10"
backon = "1.5"
base64 = "0.22"
bincode = "2"
bitvec = "1"
bstr = "1"
byteorder = "1"
bytes = "1"
chardetng = "0.1"
chrono = "0.4"
clap = "4"
clap_complete = "4"
console-subscriber = "0.5"
crc32fast = "1"
criterion = "0.7"
crypto-hash = "0.3"
dashmap = "6"
data-encoding = "2"
directories = "6"
encoding_rs = "0.8"
feed-rs = "2"
futures = "0.3"
gethostname = "1"
governor = "0.10"
hex = "0.4"
home = "0.5"
http = "1"
httparse = "1"
indexmap = "2"
intervaltree = "0.2"
itertools = "0.14"
leaky-bucket = "1.1"
libc = "0.2"
librqbit-dualstack-sockets = "0.7"
librqbit-utp = "0.7"
lru = "0.16"
memchr = "2"
memmap2 = "0.9"
metrics-exporter-prometheus = { version = "0.17", default-features = false }
mime_guess = { version = "2", default-features = false }
network-interface = "2"
nix = "0.30"
notify = "8"
openssl = "0.10"
parking_lot = "0.12"
parse_duration = "2"
pollster = "0.4"
quick-xml = "0.38"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false }
rlimit = "0.10"
rusqlite = { version = "0.34", features = ["bundled"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_urlencoded = "0.7"
serde_with = "3"
signal-hook = "0.3"
size_format = "1"
socket2 = "0.6"
sqlx = { version = "0.8", default-features = false }
tauri = "2"
tauri-build = "2"
tauri-plugin-shell = "2"
tempfile = "3"
thiserror = "2"
tokio = "1"
tokio-socks = "0.5"
tokio-stream = "0.1"
tokio-test = "0.4"
tokio-util = "0.7"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
url = { version = "2", default-features = false }
urlencoding = "2"
utoipa = "5"
utoipa-axum = "0.2"
utoipa-swagger-ui = "9"
uuid = "1"
walkdir = "2"
tauri-plugin-notification = "2"
open = "5"
windows = "0.62"

# Local development overrides — these redirect git deps to local checkouts.
# CI does NOT have these; it fetches the tagged commits from GitHub.
[patch."http://100.92.54.45:3002/indexarr/librtbit.git"]
librtbit = { path = "/home/sprooty/Working/libs/librtbit" }

[patch."http://100.92.54.45:3002/indexarr/librtbit-bencode.git"]
librtbit-bencode = { path = "/home/sprooty/Working/libs/librtbit-bencode" }

[patch."http://100.92.54.45:3002/indexarr/librtbit-buffers.git"]
librtbit-buffers = { path = "/home/sprooty/Working/libs/librtbit-buffers" }

[patch."http://100.92.54.45:3002/indexarr/librtbit-clone-to-owned.git"]
librtbit-clone-to-owned = { path = "/home/sprooty/Working/libs/librtbit-clone-to-owned" }

[patch."http://100.92.54.45:3002/indexarr/librtbit-core.git"]
librtbit-core = { path = "/home/sprooty/Working/libs/librtbit-core" }

[patch."http://100.92.54.45:3002/indexarr/librtbit-dht.git"]
librtbit-dht = { path = "/home/sprooty/Working/libs/librtbit-dht" }

[patch."http://100.92.54.45:3002/indexarr/librtbit-lsd.git"]
librtbit-lsd = { path = "/home/sprooty/Working/libs/librtbit-lsd" }

[patch."http://100.92.54.45:3002/indexarr/librtbit-peer-protocol.git"]
librtbit-peer-protocol = { path = "/home/sprooty/Working/libs/librtbit-peer-protocol" }

[patch."http://100.92.54.45:3002/indexarr/librtbit-sha1-wrapper.git"]
librtbit-sha1-wrapper = { path = "/home/sprooty/Working/libs/librtbit-sha1-wrapper" }

[patch."http://100.92.54.45:3002/indexarr/librtbit-tracker-comms.git"]
librtbit-tracker-comms = { path = "/home/sprooty/Working/libs/librtbit-tracker-comms" }

[patch."http://100.92.54.45:3002/indexarr/librtbit-upnp.git"]
librtbit-upnp = { path = "/home/sprooty/Working/libs/librtbit-upnp" }

[patch."http://100.92.54.45:3002/indexarr/librtbit-upnp-serve.git"]
librtbit-upnp-serve = { path = "/home/sprooty/Working/libs/librtbit-upnp-serve" }
