[workspace]
resolver = "2"
members = [
    "crates/rtbit",
    "desktop/src-tauri",
]
exclude = ["benchv2"]

# Everything except desktop
default-members = [
    "crates/rtbit",
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.lints.rust]
unused = "warn"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = false

[profile.release-github]
inherits = "release"

[profile.release-debug]
inherits = "release"
debug = true

[workspace.dependencies]
# Internal crates (git + tag) - keys are import names used in source code
librtbit = { version = "0.1.1", registry = "forgejo", default-features = false }
bencode = { version = "0.1.1", registry = "forgejo", package = "librtbit-bencode", default-features = false }
buffers = { version = "0.1.1", registry = "forgejo", package = "librtbit-buffers" }
clone_to_owned = { version = "0.1.1", registry = "forgejo", package = "librtbit-clone-to-owned" }
librtbit-core = { version = "0.1.1", registry = "forgejo", default-features = false }
dht = { version = "0.1.1", registry = "forgejo", package = "librtbit-dht", default-features = false }
librtbit-lsd = { version = "0.1.1", registry = "forgejo", default-features = false }
peer_binary_protocol = { version = "0.1.1", registry = "forgejo", package = "librtbit-peer-protocol", default-features = false }
sha1w = { version = "0.1.1", registry = "forgejo", package = "librtbit-sha1-wrapper", default-features = false }
tracker_comms = { version = "0.1.1", registry = "forgejo", package = "librtbit-tracker-comms", default-features = false }
librtbit-upnp = { version = "0.1.1", registry = "forgejo" }
upnp-serve = { version = "0.1.1", registry = "forgejo", package = "librtbit-upnp-serve", default-features = false }

# External crates
anyhow = "1"
arc-swap = "1.7"
arrayvec = "0.7"
assert_cfg = "0.1"
async-backtrace = "0.2"
async-compression = "0.4"
async-stream = "0.3"
async-trait = "0.1"
atoi = "2"
aws-lc-rs = "1.12"
axum = "0.8"
axum-extra = "0.10"
backon = "1.5"
base64 = "0.22"
bincode = "2"
bitvec = "1"
bstr = "1"
byteorder = "1"
bytes = "1"
chardetng = "0.1"
chrono = "0.4"
clap = "4"
clap_complete = "4"
console-subscriber = "0.5"
crc32fast = "1"
criterion = "0.7"
crypto-hash = "0.3"
dashmap = "6"
data-encoding = "2"
directories = "6"
encoding_rs = "0.8"
feed-rs = "2"
futures = "0.3"
gethostname = "1"
governor = "0.10"
hex = "0.4"
home = "0.5"
http = "1"
httparse = "1"
indexmap = "2"
intervaltree = "0.2"
itertools = "0.14"
leaky-bucket = "1.1"
libc = "0.2"
librqbit-dualstack-sockets = "0.7"
librqbit-utp = "0.7"
lru = "0.16"
memchr = "2"
memmap2 = "0.9"
metrics-exporter-prometheus = { version = "0.17", default-features = false }
mime_guess = { version = "2", default-features = false }
network-interface = "2"
nix = "0.30"
notify = "8"
openssl = "0.10"
parking_lot = "0.12"
parse_duration = "2"
pollster = "0.4"
quick-xml = "0.38"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false }
rlimit = "0.10"
rusqlite = { version = "0.34", features = ["bundled"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_urlencoded = "0.7"
serde_with = "3"
signal-hook = "0.3"
size_format = "1"
socket2 = "0.6"
sqlx = { version = "0.8", default-features = false }
tauri = "2"
tauri-build = "2"
tauri-plugin-shell = "2"
tempfile = "3"
thiserror = "2"
tokio = "1"
tokio-socks = "0.5"
tokio-stream = "0.1"
tokio-test = "0.4"
tokio-util = "0.7"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
url = { version = "2", default-features = false }
urlencoding = "2"
utoipa = "5"
utoipa-axum = "0.2"
utoipa-swagger-ui = "9"
uuid = "1"
walkdir = "2"
tauri-plugin-notification = "2"
open = "5"
windows = "0.62"
